Set the --add-opens JVM option for java.nio classes (e.g. DirectByteBuffer) to workaround Apache Geode issues on Java 16.
Configure Maven Toolchains Plugin and the Maven Surefire Plugin to use Maven Toolchains with JDK 16.

Resolves gh-497.