@@ -20,6 +20,8 @@
 
 	<properties>
 		<project.root>${basedir}/..</project.root>
+		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
+		<maven-toolchains-plugin.version>3.0.0</maven-toolchains-plugin.version>
 		<geode.version>1.13.3</geode.version>
 	</properties>
 
@@ -263,10 +265,15 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
+					<argLine>--add-opens java.base/java.nio=ALL-UNNAMED</argLine>
 					<includes>
 						<include>**/*Tests.java</include>
 						<include>**/*Test.java</include>
 					</includes>
+					<jdkToolchain>
+						<version>16</version>
+						<vendor>oracle</vendor>
+					</jdkToolchain>
 					<reuseForks>false</reuseForks>
 					<systemProperties>
 						<java.util.logging.config.file>${basedir}/src/test/resources/java-util-logging.properties</java.util.logging.config.file>
@@ -275,6 +282,26 @@
 						<logback.log.level>error</logback.log.level>
 						<spring.profiles.active>apache-geode</spring.profiles.active>
 					</systemProperties>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-toolchains-plugin</artifactId>
+				<version>${maven-toolchains-plugin.version}</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>toolchain</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<toolchains>
+						<jdk>
+							<version>16</version>
+							<vendor>oracle</vendor>
+						</jdk>
+					</toolchains>
 				</configuration>
 			</plugin>
 		</plugins>
